<resources>
    <string name="app_name">Quiz App</string>
    <string name="ati_ales_gama">Ati ales Gama:</string>
    <string name="uz_casnic">Uz casnic</string>
    <string name="timpul_a_expirat">Timpul a expirat</string>
    <string name="test_pentru_selectarea_benzii_de_alergare">Test pentru selectarea benzii de alergare</string>
    <string name="incepe_testul">Începe testul</string>
    <string name="motor_cp">Motor(cp):</string>
    <string name="sub_3">sub 3</string>
    <string name="mai_mult_de_3">mai mult de 3</string>
    <string name="viteza_km_h">Viteza(km/h):</string>
    <string name="_0_16">0-16</string>
    <string name="_0_20">0-20</string>
    <string name="_0_25">0-25</string>
    <string name="inclinare">Inclinare:</string>
    <string name="_15_nivele">15 nivele</string>
    <string name="_18_nivele">18 nivele</string>
    <string name="_25_nivele">25 nivele</string>
    <string name="conectare_bluetooth">Conectare Bluetooth:</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>
    <string name="greutatea_maxima_a_utilizatorului">Greutatea maxima a utilizatorului:</string>
    <string name="_85">85</string>
    <string name="_120">120</string>
    <string name="_250">250</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="uz_semiprofessional">Uz semiprofessional</string>
    <string name="uz_professional">Uz professional</string>
</resources>