<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp"
    android:gravity="center">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"

        app:layout_constraintVertical_bias="0.436">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/motor_cp"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="32sp" />

            <RadioGroup
                android:id="@+id/rgMotor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_3"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mai_mult_de_3"
                    android:layout_weight="1"/>

            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/viteza_km_h"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="32sp" />

            <RadioGroup
                android:id="@+id/rgViteza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_16" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_20" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_25" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/inclinare"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="32sp" />

            <RadioGroup
                android:id="@+id/rgInclinare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_nivele" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_18_nivele" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_nivele" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/conectare_bluetooth"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="32sp" />

            <RadioGroup
                android:id="@+id/rgConectareBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">



                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/da"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nu"
                    android:layout_weight="1"/>

            </RadioGroup>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/greutatea_maxima_a_utilizatorului"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="32sp" />

            <RadioGroup
                android:id="@+id/rgGreutateMaxima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_85" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_120" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_250" />


            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">


                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:layout_marginRight="10dp"
                    android:text="@string/reset"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:layout_marginLeft="10dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>

